User: Adds OpenID connect login provider
TYPE: Feature
LINK: OGC-1767

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -261,6 +261,7 @@ multiline-quotes = "double"
 keep-runtime-typing = true
 
 [tool.ruff.lint.ruff]
+extend-markup-names = ["chameleon.utils.Markup"]
 
 [tool.ruff.format]
 quote-style = "single"
