--- a/setup.cfg
+++ b/setup.cfg
@@ -53,9 +53,10 @@ packages =
     onegov.translator_directory
 install_requires =
     AIS2.py
-    aiohttp
     Pillow
+    PyJWT
     PyYAML
+    aiohttp
     alembic
     arrow
     attrs
@@ -108,6 +109,7 @@ install_requires =
     more_itertools
     morepath
     msal
+    oauthlib
     ordered-set
     openpyxl
     passlib
@@ -137,6 +139,7 @@ install_requires =
     redis
     reportlab
     requests
+    requests-oauthlib
     rjsmin
     sedate
     sentry_sdk
@@ -203,6 +206,7 @@ mypy =
     types-ldap3
     types-libsass
     types-lxml
+    types-oauthlib
     types-openpyxl
     types-passlib
     types-polib
@@ -218,6 +222,7 @@ mypy =
     types-redis
     types-reportlab
     types-requests
+    types-requests-oauthlib
     types-setuptools<71
     types-stripe
     types-toposort
