Switches to using ua_parsers's typed 1.0 API
Installs Rust-based acceleration extension

--- a/setup.cfg
+++ b/setup.cfg
@@ -154,7 +154,7 @@ install_requires =
     tqdm
     translationstring
     typing-extensions
-    ua-parser
+    ua-parser[regex]
     unidecode
     urlextract
     vobject
