Org: Avoid generating redundant file links for linked general files
This also updates WebTest to the newest version, since we need it in
order to test multi-file uploads.

TYPE: Bugfix
LINK: OGC-1967

--- a/setup.cfg
+++ b/setup.cfg
@@ -162,7 +162,7 @@ install_requires =
     webcolors
     webob
     websockets
-    webtest < 3.0.1
+    webtest
     werkzeug
     wtforms
     xlrd
