Revert "Omit not needed default value for get"
This reverts commit 49daaf2bc05c1265ab39772d2433f7eef51e37d4.

`RUF056` is a little too opinionated for my liking.
An explicit default can serve as documentation and is essentially free
for immortal objects like `False` and `None`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,6 +176,7 @@ ignore = [
     "RUF023",
     "RUF031",
     "RUF052",
+    "RUF056",
     # TODO: We would like to enable SIM102, but it has a ton of
     #       violations, so it's a big job to clean it up
     "SIM102",
