--- a/setup.cfg
+++ b/setup.cfg
@@ -179,6 +179,7 @@ dev =
     honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
     lingua==3.12
     pre-commit
+    pre-commit-uv
     pytest-profiling
     pytest-split
     pytest-testmon
