--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,15 +35,12 @@ python_version = "3.11"
 follow_imports = "silent"
 namespace_packages = true
 explicit_package_bases = true
-warn_unused_ignores = true
-warn_redundant_casts = true
-warn_unused_configs = true
+strict = true
+implicit_reexport = true
 warn_unreachable = true
-disallow_any_generics = true
-disallow_incomplete_defs = true
-disallow_untyped_defs = true
-strict_equality = true
-extra_checks = true
+warn_return_any = false
+# FIXME: remove sqlalchemy when upgrading to SQlAlchemy 2.0
+untyped_calls_exclude = "sqlalchemy,pycurl,onegov.core.types"
 plugins = "sqlmypy"
 mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/stubs"
 
