Pay: Adds Datatrans payment provider
TYPE: Feature
LINK: OGC-2007

--- a/setup.cfg
+++ b/setup.cfg
@@ -126,6 +126,9 @@ install_requires =
     qrbill
     qrcode
     py
+    pycountry
+    pydantic
+    pydantic-extra-types
     pyotp
     pysaml2
     python-dateutil
