--- a/setup.cfg
+++ b/setup.cfg
@@ -291,6 +291,7 @@ console_scripts =
     onegov-landsgemeinde = onegov.org.cli:cli
     onegov-org = onegov.org.cli:cli
     onegov-people = onegov.people.cli:cli
+    onegov-pas = onegov.pas.cli:cli
     onegov-search = onegov.search.cli:cli
     onegov-server = onegov.server.cli:run
     onegov-swissvotes = onegov.swissvotes.cli:cli
