Pin bandit temporarily.

--- a/setup.cfg
+++ b/setup.cfg
@@ -189,7 +189,8 @@ dev =
     pytest-xdist
     scrambler
 lint =
-    bandit[toml]
+    # temporary pin so CI pasxes
+    bandit[toml]==1.8.2
     flake8
     # TODO: consider hosting our own plugin on pypi
     #       or get an equivalent rule added to bandit
