Pas: Adds provisional import script.
TYPE: Feature
LINK: OGC-1878

--- a/setup.cfg
+++ b/setup.cfg
@@ -189,7 +189,8 @@ dev =
     pytest-xdist
     scrambler
 lint =
-    bandit[toml]
+    # temporary pin so CI pasxes
+    bandit[toml]==1.8.2
     flake8
     # TODO: consider hosting our own plugin on pypi
     #       or get an equivalent rule added to bandit
@@ -291,6 +292,7 @@ console_scripts =
     onegov-landsgemeinde = onegov.org.cli:cli
     onegov-org = onegov.org.cli:cli
     onegov-people = onegov.people.cli:cli
+    onegov-pas = onegov.pas.cli:cli
     onegov-search = onegov.search.cli:cli
     onegov-server = onegov.server.cli:run
     onegov-swissvotes = onegov.swissvotes.cli:cli
