--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,10 +26,10 @@ repos:
         files: '^src.*\.py'
         additional_dependencies:
         - flake8-type-checking>=3.0.0
-  - repo: https://github.com/elidupuis/mirrors-sass-lint
-    rev: '5cc45653263b423398e4af2561fae362903dd45d'
+  - repo: https://github.com/pre-commit/mirrors-scss-lint
+    rev: 'v0.60.0'
     hooks:
-    - id: sass-lint
+    - id: scss-lint
       files: '^src/.*\.scss'
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v9.20.1
