Adds plausible package

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ packages =
     onegov.pay
     onegov.pdf
     onegov.people
+    onegov.plausible
     onegov.qrcode
     onegov.quill
     onegov.recipient
