--- a/setup.cfg
+++ b/setup.cfg
@@ -105,6 +105,7 @@ install_requires =
     markupsafe
     mistletoe>=1.2.0
     more.content_security
+    more.itsdangerous
     more.transaction
     more.webassets
     more_itertools
