--- a/setup.cfg
+++ b/setup.cfg
@@ -105,6 +105,7 @@ install_requires =
     markupsafe
     mistletoe>=1.2.0
     more.content_security
+    more.itsdangerous
     more.transaction
     more.webassets
     more_itertools
@@ -112,6 +113,7 @@ install_requires =
     msal
     oauthlib
     ordered-set
+    ormsgpack>1.7.0
     openpyxl
     passlib
     pdfdocument
