Core: Switches Redis cache serialization over to MessagePack
TYPE: Feature
LINK: OGC-1893

--- a/setup.cfg
+++ b/setup.cfg
@@ -104,6 +104,7 @@ install_requires =
     markupsafe
     mistletoe>=1.2.0
     more.content_security
+    more.itsdangerous
     more.transaction
     more.webassets
     more_itertools
@@ -111,6 +112,7 @@ install_requires =
     msal
     oauthlib
     ordered-set
+    ormsgpack>1.7.0
     openpyxl
     passlib
     pdfdocument
