Adding firebase push notifications

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,6 +85,7 @@ install_requires =
     faker
     feedgen
     filedepot
+    firebase-admin
     fs
     genshi
     hiredis
@@ -180,7 +181,7 @@ install_requires =
 [options.extras_require]
 dev =
     gitpython
-    honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
+    honyaku @ file:///home/cyrill/honyaku
     lingua==3.12
     pre-commit
     pre-commit-uv
