--- a/setup.cfg
+++ b/setup.cfg
@@ -85,7 +85,6 @@ install_requires =
     faker
     feedgen
     filedepot
-    firebase-admin
     fs
     genshi
     hiredis
@@ -184,7 +183,7 @@ install_requires =
 [options.extras_require]
 dev =
     gitpython
-    honyaku @ file:///home/cyrill/honyaku
+    honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
     lingua==3.12
     pre-commit
     pre-commit-uv
