--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,7 +97,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        group: [1, 2, 3, 4, 5, 6]
+        group: [1, 2, 3, 4, 5, 6, 7]
 
     runs-on: ubuntu-24.04
 
@@ -196,7 +196,7 @@ jobs:
           -n logical \
           -o cache_dir=/tmp/pytest \
           --dist loadgroup \
-          --splits "6" \
+          --splits "7" \
           --group "${{matrix.group}}" \
           --cov \
           --cov-config=pyproject.toml \
