Fixes setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -184,7 +184,7 @@ install_requires =
 [options.extras_require]
 dev =
     gitpython
-    honyaku @ file:///home/cyrill/honyaku
+    honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
     lingua==3.12
     pre-commit
     pre-commit-uv
