--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -201,9 +201,9 @@ jobs:
           --rerun-failures \
           --reruns 3 \
           --rerun-delay 1 \
-          --only-rerun 'AttributeError: \'SessionManager\'' \
-          --only-rerun 'ReferenceError: $ is not defined' \
-          --only-rerun 'FileNotFoundError: [Errno 2] No such file' \
+          --only-rerun "AttributeError: 'SessionManager'" \
+          --only-rerun "ReferenceError: $ is not defined" \
+          --only-rerun "FileNotFoundError: [Errno 2] No such file" \
           --cov \
           --cov-config=pyproject.toml \
           --codecov \
