--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -198,9 +198,8 @@ jobs:
           --dist loadgroup \
           --splits "7" \
           --group "${{matrix.group}}" \
-          --rerun-failures \
           --reruns 3 \
-          --rerun-delay 1 \
+          --reruns-delay 1 \
           --only-rerun "AttributeError: 'SessionManager'" \
           --only-rerun "ReferenceError: $ is not defined" \
           --only-rerun "FileNotFoundError: [Errno 2] No such file" \
