Adds another common flaky error
Although this one can be legit if we forget to override an org view in
town6

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -157,6 +157,7 @@ jobs:
           --reruns 3 \
           --reruns-delay 1 \
           --only-rerun "AttributeError: 'SessionManager'" \
+          --only-rerun "AttributeError: 'DefaultLayout'" \
           --only-rerun "ReferenceError: $ is not defined" \
           --only-rerun "FileNotFoundError: [Errno 2] No such file" \
           --only-rerun "Bad response: 404 Not Found" \
