--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -195,6 +195,7 @@ jobs:
         run-as "$(id -u test)":test /app/bin/pytest \
           -n logical \
           -o cache_dir=/tmp/pytest \
+          -r fER \
           --dist loadgroup \
           --splits "7" \
           --group "${{matrix.group}}" \
