Ignores all invalid escape sequence warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ filterwarnings = [
     '''ignore:pkg_resources is deprecated as an API''',
     '''ignore:Deprecated call to `pkg_resources\.declare_namespace\('.*'\):DeprecationWarning''',
     # potential issue for future upgrades
-    '''ignore:.*invalid escape sequence:DeprecationWarning:pdfrw.*:''',
-    '''ignore:.*invalid escape sequence:DeprecationWarning:webassets.*:''',
+    # unfortunately it's not possible to filter escape sequence warnings in
+    # specific modules, but we should be covered by Ruff for our own code
+    '''ignore:invalid escape sequence '[^']+':::''',
     '''ignore:'crypt':DeprecationWarning:passlib.*:''',
     # fixed upstream
     '''ignore:(tagMap|typeMap) is deprecated:DeprecationWarning:pyasn1.*:''',
