Adds JUnit XML to Codecov upload

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -151,6 +151,7 @@ jobs:
         run-as "$(id -u test)":test /app/bin/py.test \
           -n logical \
           -o cache_dir=/tmp/pytest \
+          -r fER \
           --dist loadgroup \
           --splits "6" \
           --group "${{matrix.group}}" \
@@ -161,6 +162,8 @@ jobs:
           --only-rerun "ReferenceError: $ is not defined" \
           --only-rerun "FileNotFoundError: [Errno 2] No such file" \
           --only-rerun "Bad response: 404 Not Found" \
+          --junit-xml=/tmp/junit.xml \
+          -o junit_family=legacy \
           --cov \
           --cov-config=pyproject.toml \
           --codecov \
