Improve api configuration

--- a/onegov.yml.example
+++ b/onegov.yml.example
@@ -159,6 +159,9 @@ configuration: &global-config
   # mfg_api_token:
   # bs_api_token:
 
+  # Web Statistics
+  # plausible_api_token:
+
   # for org app, disable the password reset view (case the users have their own auth providers)
   # disable_password_reset: true
 
