Ruff: Enables `TRY` and fixes issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,6 +145,7 @@ select = [
     "N",
     "PERF",
     "PGH004",
+    "PGH005",
     "PIE",
     "PYI",
     "Q",
@@ -152,6 +153,7 @@ select = [
     "SIM",
     "SLOT",
     "T",
+    "TRY",
     "UP",
     "W"
 ]
@@ -195,6 +197,11 @@ ignore = [
     "SIM118",
     "SIM210",
     "SIM910",
+    "TRY003",
+    "TRY300",
+    # NOTE: It probably makes sense to enable this, but the refactor
+    #       will take a bit of effort.
+    "TRY301",
     "UP009",
     "UP012",
     "UP032",
@@ -236,12 +243,13 @@ preview = true
     "N",
     "Q",
     "PERF",
-    "PGH",
+    "PGH004",
     "PIE",
     "PYI",
     "RUF",
     "SIM",
     "T",
+    "TRY",
     "UP",
 ]
 
