--- a/setup.cfg
+++ b/setup.cfg
@@ -244,7 +244,7 @@ docs =
     sphinx_rtd_theme
     docutils
     Jinja2
-    sphinx
+    sphinx==8.2.3
     sphinx-autoapi
     typing-extensions
     myst-parser
