--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
         exclude: .pre-commit-config.yaml
       - id: pt_structure
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.8
+    rev: v0.11.9
     hooks:
       - id: ruff
         args: [ "--fix" ]
@@ -26,11 +26,13 @@ repos:
         files: '^src.*\.py'
         additional_dependencies:
         - flake8-type-checking>=3.0.0
-  - repo: https://github.com/pre-commit/mirrors-scss-lint
-    rev: 'v0.60.0'
-    hooks:
-    - id: scss-lint
-      files: '^src/.*\.scss'
+# FIXME: Let's try to get a maintained and correctly configured scss linter
+#        back into the workflow, right now this one is broken: OGC-2251
+#  - repo: https://github.com/pre-commit/mirrors-scss-lint
+#    rev: 'v0.60.0'
+#    hooks:
+#    - id: scss-lint
+#      files: '^src/.*\.scss'
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v9.26.0
     hooks:
