--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,7 +97,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        group: [1, 2, 3, 4, 5, 6, 7]
+        group: [1, 2, 3, 4, 5, 6, 7, 8]
 
     runs-on: ubuntu-24.04
 
@@ -197,7 +197,7 @@ jobs:
           -o cache_dir=/tmp/pytest \
           -r fER \
           --dist loadgroup \
-          --splits "7" \
+          --splits "8" \
           --group "${{matrix.group}}" \
           --reruns 3 \
           --reruns-delay 1 \
