Search: Replaces `langdetect` with `lingua-language-detector`

--- a/setup.cfg
+++ b/setup.cfg
@@ -97,11 +97,11 @@ install_requires =
     itsdangerous
     jsonpickle
     kerberos
-    langdetect
     lazy-object-proxy
     ldap3
     libres>=0.7.2
     libsass
+    lingua-language-detector
     lxml
     markupsafe
     mistletoe>=1.2.0
@@ -185,7 +185,6 @@ install_requires =
 dev =
     gitpython
     honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
-    lingua==3.12
     pre-commit
     pre-commit-uv
     pytest-profiling
@@ -193,6 +192,7 @@ dev =
     pytest-testmon
     pytest-xdist
     scrambler
+    uv
 lint =
     # temporary pin so CI pasxes
     bandit[toml]==1.8.2
