Cleans up version pins

--- a/setup.cfg
+++ b/setup.cfg
@@ -194,14 +194,10 @@ dev =
     scrambler
     uv
 lint =
-    # temporary pin so CI pasxes
-    bandit[toml]==1.8.2
+    bandit[toml]
     flake8
-    # TODO: consider hosting our own plugin on pypi
-    #       or get an equivalent rule added to bandit
-    #       for now we pin to a specific commit for safety
     flake8-type-checking
-    ruff!=0.7.2
+    ruff
 mypy =
     dogpile.cache>=1.2.1
     GitPython
