Adds duroc hog and choctow hog scanners as pre commit steps

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,3 +69,18 @@ repos:
         language: system
         files:  '^stubs/.*\.pyi$'
         pass_filenames: false
+  - repo: local
+    hooks:
+      - id: durochog
+        name: DurocHog Secret Scanner
+        description: Scan staged files for secrets, https://github.com/newrelic/rusty-hog
+        entry: ./durochog.sh
+        language: system
+  - repo: local
+    hooks:
+      - id: choctawhog
+        name: Choctaw Hog Secret Scanner
+        description: Scan git HEAD for secrets, https://github.com/newrelic/rusty-hog
+        entry: choctaw_hog --since_commit HEAD .
+        language: system
+        pass_filenames: false
