Org: Fixes mTAN statistics not being sent for every month
TYPE: Bugfix
LINK: OGC-2288

--- a/setup.cfg
+++ b/setup.cfg
@@ -151,7 +151,11 @@ install_requires =
     rjsmin
     sedate
     sentry_sdk
-    setuptools
+    # FIXME: Morepath relies on pkg_resources, which is slated for
+    #        removal, we could pin to <81, but then we get a deprecation
+    #        message. Hopefully morepath deals with this at some point
+    #        so we don't end up locked into Python <3.14
+    setuptools<80
     sortedcontainers
     sqlalchemy<1.4.0
     sqlalchemy-utils
