Register module parliament and add upgrade step

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ packages =
     onegov.onboarding
     onegov.org
     onegov.page
+    onegov.parliament
     onegov.pas
     onegov.pay
     onegov.pdf
@@ -296,7 +297,7 @@ console_scripts =
     onegov-gazette = onegov.gazette.cli:cli
     onegov-landsgemeinde = onegov.org.cli:cli
     onegov-org = onegov.org.cli:cli
-    onegov-people = onegov.people.cli:cli
+    onegov-parliament = onegov.parliament.cli:cli
     onegov-pas = onegov.pas.cli:cli
     onegov-search = onegov.search.cli:cli
     onegov-server = onegov.server.cli:run
@@ -328,6 +329,7 @@ onegov_upgrades =
     onegov.onboarding = onegov.onboarding.upgrade
     onegov.org = onegov.org.upgrade
     onegov.page = onegov.page.upgrade
+    onegov.parliament = onegov.parliament.upgrade
     onegov.pas = onegov.pas.upgrade
     onegov.pay = onegov.pay.upgrade
     onegov.pdf = onegov.pdf.upgrade
