re-add onegov-people cli
Co-authored-by: David Salvisberg <david.salvisberg@seantis.ch>

--- a/setup.cfg
+++ b/setup.cfg
@@ -297,7 +297,7 @@ console_scripts =
     onegov-gazette = onegov.gazette.cli:cli
     onegov-landsgemeinde = onegov.org.cli:cli
     onegov-org = onegov.org.cli:cli
-    onegov-parliament = onegov.parliament.cli:cli
+    onegov-people = onegov.people.cli:cli
     onegov-pas = onegov.pas.cli:cli
     onegov-search = onegov.search.cli:cli
     onegov-server = onegov.server.cli:run
