RIS: Models for RIS light
TYPE: Feature
LINK: ogc-2245

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ packages =
     onegov.onboarding
     onegov.org
     onegov.page
+    onegov.parliament
     onegov.pas
     onegov.pay
     onegov.pdf
@@ -328,6 +329,7 @@ onegov_upgrades =
     onegov.onboarding = onegov.onboarding.upgrade
     onegov.org = onegov.org.upgrade
     onegov.page = onegov.page.upgrade
+    onegov.parliament = onegov.parliament.upgrade
     onegov.pas = onegov.pas.upgrade
     onegov.pay = onegov.pay.upgrade
     onegov.pdf = onegov.pdf.upgrade
