--- a/setup.cfg
+++ b/setup.cfg
@@ -180,7 +180,7 @@ install_requires =
     werkzeug
     wtforms
     xlrd
-    xlsxwriter
+    xlsxwriter!=3.2.4
     xsdata!=23.5
     xsdata-ech
     yubico-client
