--- a/setup.cfg
+++ b/setup.cfg
@@ -146,7 +146,8 @@ install_requires =
     pyyaml
     rcssmin
     redis
-    reportlab
+    # FIXME: Something about reportlab 4.4.2 broke our tests
+    reportlab<4.4.2
     requests
     requests-oauthlib
     rjsmin
