lxml is the culprit

--- a/setup.cfg
+++ b/setup.cfg
@@ -103,7 +103,8 @@ install_requires =
     libres>=0.9.0
     libsass
     lingua-language-detector
-    lxml
+    # FIXME: OGC-2363
+    lxml<6
     markupsafe
     mistletoe>=1.2.0
     more.content_security
@@ -146,8 +147,7 @@ install_requires =
     pyyaml
     rcssmin
     redis
-    # FIXME: Something about reportlab 4.4.2 broke our tests
-    reportlab<4.4.2
+    reportlab
     requests
     requests-oauthlib
     rjsmin
