--- a/setup.cfg
+++ b/setup.cfg
@@ -103,7 +103,8 @@ install_requires =
     libres>=0.9.0
     libsass
     lingua-language-detector
-    lxml
+    # FIXME: OGC-2363
+    lxml<6
     markupsafe
     mistletoe>=1.2.0
     more.content_security
